Hides empty breadcrumbs

--- a/templates/navigation/breadcrumb.html.twig
+++ b/templates/navigation/breadcrumb.html.twig
@@ -15,20 +15,20 @@
  */
 #}
 {% if breadcrumb %}
-    <div class="ucb-breadcrumb">
-        <nav role="navigation" aria-labelledby="system-breadcrumb">
-            <h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
-            <ul>
-                {% for item in breadcrumb %}
-                    <li>
-                        {% if item.url %}
-                            <a href="{{ item.url }}">{{ item.text }}</a>
-                        {% else %}
-                            {{ item.text }}
-                        {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-        </nav>
-    </div>
+	<div class="ucb-breadcrumb">
+		<nav role="navigation" aria-labelledby="system-breadcrumb">
+			<h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
+			<ul>
+				{% for item in breadcrumb if item.text %}
+					<li>
+						{% if item.url %}
+							<a href="{{ item.url }}">{{ item.text }}</a>
+						{% else %}
+							{{ item.text }}
+						{% endif %}
+					</li>
+				{% endfor %}
+			</ul>
+		</nav>
+	</div>
 {% endif %}
