--- a/templates/navigation/breadcrumb.html.twig
+++ b/templates/navigation/breadcrumb.html.twig
@@ -15,18 +15,21 @@
  */
 #}
 {% if breadcrumb %}
+	{{ attach_library('boulderD9_base/ucb-breadcrumb') }}
 	<div class="ucb-breadcrumb">
 		<nav role="navigation" aria-labelledby="system-breadcrumb">
 			<h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
 			<ul>
 				{% for item in breadcrumb if item.text %}
-					<li>
-						{% if item.url %}
+					{% if item.url %}
+						<li class="ucb-breadcrumb-link">
 							<a href="{{ item.url }}">{{ item.text }}</a>
-						{% else %}
-							{{ item.text }}
-						{% endif %}
-					</li>
+						</li>
+					{% else %}
+						<li class="ucb-breadcrumb-static">
+							<span>{{ item.text }}</span>
+						</li>
+					{% endif %}
 				{% endfor %}
 			</ul>
 		</nav>
