--- a/templates/content/node--basic-page.html.twig
+++ b/templates/content/node--basic-page.html.twig
@@ -73,7 +73,7 @@
 {#Dummy variable to ensure that all content tags are set for caching purposes#}
 {% set content_render = content|render %}
 
-{# Used for hiding site URL visibly using sr-only bootstrap class #}
+{# Used for hiding site title visibly using sr-only bootstrap class #}
 {% set site_url = path("<current>") %} 
 {% set srOnly = '' %}
 {% if site_url is same as '/homepage' %}
