Made h1 sr-only rather than parent container

--- a/templates/content/node--basic-page.html.twig
+++ b/templates/content/node--basic-page.html.twig
@@ -89,8 +89,8 @@
 
 <article{{attributes.addClass(classes)}}>
 	{% if label %}
-		<div class="container {{srOnly}}">
-			<h1{{title_attributes}}>
+		<div class="container">
+			<h1{{title_attributes}} class="{{srOnly}}">
 				{{ label }}
 			</h1>
 		</div>
