--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -118,4 +118,9 @@ i.fas.fa-circle {
 
 .ucb-page-style-striped .ucb-striped-content:nth-child(even) {
 	background-color:#EEEEEE;
+	border-top: 1px solid rgba(187, 187, 187, 0.4);
+	border-bottom: 1px solid rgba(187, 187, 187, 0.4);
+	margin-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 0;
 }
