--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -121,6 +121,5 @@ i.fas.fa-circle {
 	border-top: 1px solid rgba(187, 187, 187, 0.4);
 	border-bottom: 1px solid rgba(187, 187, 187, 0.4);
 	margin-bottom: 20px;
-	padding-top: 20px;
-	padding-bottom: 0;
+	padding-top: calc(20px + 0.5em);
 }
