--- a/templates/paragraphs/paragraph--newsletter-section.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section.html.twig
@@ -23,7 +23,7 @@
 			{% for key, item in paragraph.field_newsletter_section_select if key|first != '#' %}
 				{# Code to render selected article content (thumbnail) #}
 				{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
-					<div id='feature-article-thumbnail-{{key}}'> {{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail|view }} </div?
+					<div id='feature-article-thumbnail-{{key}}'> {{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail|view }} </div>
 
 					{# Code to render selected article content (!thumbnail) #}
 				{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
