Fixes bug introduced in previous commit

--- a/templates/field/field--field-ucb-person-links.html.twig
+++ b/templates/field/field--field-ucb-person-links.html.twig
@@ -19,93 +19,94 @@
 			<li{{item.attributes.addClass(classes)}}>
 
 				{% set linkTitle = item.content['#title'] %}
-				{% set linkUrl = item.content['#url']|render|striptags|trim  %}
+				{% set linkUrl = item.content['#url']|render|striptags|trim %}
+				{% set linkUrlUpper = linkUrl|upper %}
 
-				{% if 'FACEBOOK' in linkUrl %}
+				{% if 'FACEBOOK' in linkUrlUpper %}
 					<span class="sr-only">Facebook</span>
 					<i class="fab fa-facebook"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-facebook-link" title="Facebook" alt="Facebook">
 						<span>{{ linkTitle }}</span>
 					</a>
 					
-				{% elseif 'TWITTER' in linkUrl %}
+				{% elseif 'TWITTER' in linkUrlUpper %}
 					<span class="sr-only">Twitter</span>
 					<i class="fab fa-twitter"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-twitter-link" title="Twitter" alt="Twitter">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'FLICKR' in linkUrl %}
+				{% elseif 'FLICKR' in linkUrlUpper %}
 					<span class="sr-only">Flickr</span>
 					<i class="fab fa-flickr"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-flickr-link" title="Flickr" alt="Flickr">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'LINKEDIN' in linkUrl %}
+				{% elseif 'LINKEDIN' in linkUrlUpper %}
 					<span class="sr-only">LinkedIn</span>
 					<i class="fab fa-linkedin"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-linkedin-link" title="LinkedIn" alt="LinkedIn">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'YOUTUBE' in linkUrl %}
+				{% elseif 'YOUTUBE' in linkUrlUpper %}
 					<span class="sr-only">YouTube</span>
 					<i class="fab fa-youtube"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-youtube-link" title="YouTube" alt="YouTube">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'INSTAGRAM' in linkUrl %}
+				{% elseif 'INSTAGRAM' in linkUrlUpper %}
 					<span class="sr-only">Instagram</span>
 					<i class="fab fa-instagram"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-instagram-link" title="Instagram" alt="Instagram">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'DISCORD' in linkUrl %}
+				{% elseif 'DISCORD' in linkUrlUpper %}
 					<span class="sr-only">Discord</span>
 					<i class="fab fa-discord"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-discord-link" title="Discord" alt="Discord">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'PINTREST' in linkUrl %}
+				{% elseif 'PINTREST' in linkUrlUpper %}
 					<span class="sr-only">Pintrest</span>
 					<i class="fab fa-pinterest-p"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-pintrest-link" title="Pintrest" alt="Pintrest">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'VIMEO' in linkUrl %}
+				{% elseif 'VIMEO' in linkUrlUpper %}
 					<span class="sr-only">Vimeo</span>
 					<i class="fab fa-vimeo-v"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-vimeo-link" title="Vimeo" alt="Vimeo">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'WORDPRESS' in linkUrl %}
+				{% elseif 'WORDPRESS' in linkUrlUpper %}
 					<span class="sr-only">Wordpress</span>
 					<i class="fab fa-wordpress-simple"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-wordpress-link" title="Wordpress" alt="Wordpress">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'TIKTOK' in linkUrl %}
+				{% elseif 'TIKTOK' in linkUrlUpper %}
 					<span class="sr-only">TikTok</span>
 					<i class="fab fa-tiktok"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-tiktok-link" title="TikTok" alt="TikTok">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'REDDIT' in linkUrl %}
+				{% elseif 'REDDIT' in linkUrlUpper %}
 					<span class="sr-only">Reddit</span>
 					<i class="fab fa-reddit-alien"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-reddit-link" title="Reddit" alt="Reddit">
 						<span>{{ linkTitle }}</span>
 					</a>
 
-				{% elseif 'PATREON' in linkUrl %}
+				{% elseif 'PATREON' in linkUrlUpper %}
 					<span class="sr-only">Patreon</span>
 					<i class="fab fa-patreon"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-patreon-link" title="Patreon" alt="Patreon">
