Part 2 of adding 'container'
Part 2 of adding 'container' to all the blocks to make things more betterer

--- a/templates/block/block--inline-block--text-block.html.twig
+++ b/templates/block/block--inline-block--text-block.html.twig
@@ -40,7 +40,7 @@
 {% endif %}
 
 {% block content %}
-	<div{{attributes.addClass(classes)}}>
+	<div{{attributes.addClass(classes)}} class="container">
 		<div class="{{ blockBackground }} {{ blockStyle }}">
 			{{ title_prefix }}
 			{% if label %}
