--- a/templates/block/block--inline-block--video-reveal.html.twig
+++ b/templates/block/block--inline-block--video-reveal.html.twig
@@ -24,7 +24,7 @@
 
 
 {% block content %}
-	<div{{attributes.addClass(classes)}}>
+	<div{{attributes.addClass(classes)}} class="container">
 		{{ title_prefix }}
 		{% if label %}
 			<h2{{title_attributes}}>{{ label }}</h2>
