--- a/templates/block/block--local-tasks-block.html.twig
+++ b/templates/block/block--local-tasks-block.html.twig
@@ -7,7 +7,7 @@
 #}
 {% block content %}
     {% if content %}
-        <div id="local-tasks-menu" class="ucb-local-tasks">
+        <div id="local-tasks-menu" class="ucb-local-tasks container">
           <div>
             {{ content }}
           </div>
