Oopsie on part 2
My brain messed up and I tried to apply the container as a class attribute but that was getting overridden by the attributes addition from twig which LOL my bad right?

--- a/templates/block/block--inline-block--text-block.html.twig
+++ b/templates/block/block--inline-block--text-block.html.twig
@@ -40,7 +40,7 @@
 {% endif %}
 
 {% block content %}
-	<div{{attributes.addClass(classes)}} class="container">
+	<div{{attributes.addClass(classes).addClass('container')}}>
 		<div class="{{ blockBackground }} {{ blockStyle }}">
 			{{ title_prefix }}
 			{% if label %}
