wip: refactoring as web component, getting data

--- a/templates/content/node--ucb-people-list-page.html.twig
+++ b/templates/content/node--ucb-people-list-page.html.twig
@@ -186,3 +186,11 @@
     </div>
 	</div>
 </article>
+
+<ucb-people-list
+  JSON={{peopleJSON}}{{ IncludeFilter }}{{ sortFilter}}
+  format={{ displayFormat|trim }}
+  groupby={{ GroupBy }}
+  orderby={{ OrderBy }}
+>
+</ucb-people-list>
