Error handling for No Matches

--- a/templates/content/node--ucb-people-list-page.html.twig
+++ b/templates/content/node--ucb-people-list-page.html.twig
@@ -171,7 +171,7 @@
     </div>
 
     {# No more Data #}
-    <div id="ucb-al-end-of-data" class="ucb-list-msg ucb-end-of-results">
+    <div id="ucb-al-no-data" class="ucb-list-msg ucb-end-of-results">
       No results matching your filters.
     </div>
 
