Refined DOM targeting of render logic for web component best practices

--- a/css/ucb-people-list.css
+++ b/css/ucb-people-list.css
@@ -89,6 +89,6 @@ thead.ucb-people-list-table-head {
   background: #ccc;
 }
 
-tbody#ucb-people-list-table-tablebody {
+tbody.ucb-people-list-table-tablebody {
   background: #fafafa;
 }
