--- a/css/ucb-person.css
+++ b/css/ucb-person.css
@@ -62,9 +62,10 @@ ul.ucb-person-title li:not(:first-child):before,
 ul.ucb-person-department li:not(:first-child):before {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
-  font-size: 3px;
+ font-size: 0.25em;
   content: "\f111";
   vertical-align: middle;
+  padding: 0 0.25em;
 }
 
 .ucb-person-title li,
@@ -75,4 +76,5 @@ ul.ucb-person-department li:not(:first-child):before {
 .ucb-person-title,
 .ucb-person-department {
   padding-left: 0;
+  margin-bottom: 0;
 }
