adding in itemprop=department for the departments for Schema.org hinting

--- a/templates/field/field--field-ucb-person-department.html.twig
+++ b/templates/field/field--field-ucb-person-department.html.twig
@@ -1,7 +1,7 @@
 
 <ul class="ucb-person-department">
     {% for item in items %}
-        <li>
+        <li itemprop="department">
             {{ item.content|render|striptags|trim }}
         </li>
     {% endfor %}
