Adds user-config parameter

--- a/templates/content/node--ucb-people-list-page.html.twig
+++ b/templates/content/node--ucb-people-list-page.html.twig
@@ -104,7 +104,8 @@
 
   <ucb-people-list
   base-uri="{{ url('<front>')|render|trim('/') }}/jsonapi"
-  config="{{ config|json_encode }}">
+  config="{{ config|json_encode }}"
+  user-config="{}">
 </ucb-people-list>
 
 </article>
