--- a/templates/content/node--ucb-people-list-page.html.twig
+++ b/templates/content/node--ucb-people-list-page.html.twig
@@ -9,24 +9,6 @@
 #}
 {{ attach_library('boulderD9_base/ucb-page') }}
 {{ attach_library('boulderD9_base/ucb-people-list-page') }}
-
-{# Display format variable #}
-{% set displayFormat = content.field_ucb_people_display|render|striptags|trim|lower %}
-
-{# include filter options set by the user #}
-{% set myDepartments =
-  content.field_ucb_people_department|render|striptags|trim|split(' ')
-%}
-{% set myTypes =
-  content.field_ucb_people_job_type|render|striptags|trim|split(' ')
-%}
-
-{# Group By paramater #}
-{% set GroupBy = content.field_ucb_people_group_by|render|striptags|trim %}
-
-{# Order By paramater #}
-{% set OrderBy = content.field_ucb_people_order_by|render|striptags|trim %}
-
 {%
 	set classes = [
 		'node',
@@ -41,12 +23,12 @@
 	set config = {
 		'filters': {
 			'department': {
-				'includes': myDepartments,
+				'includes': content.field_ucb_people_department|render|striptags|trim|split(' '),
 				'userAccessible': content.field_ucb_people_department_s|render|striptags|trim == 'On',
 				'label': 'Department',
 			},
 			'job_type': {
-				'includes': myTypes,
+				'includes': content.field_ucb_people_job_type|render|striptags|trim|split(' '),
 				'userAccessible': content.field_ucb_people_job_type_s|render|striptags|trim == 'On',
 				'label': 'Job Type'
 			},
@@ -66,48 +48,18 @@
 				'label': 'Filter 3'
 			}
 		},
-		'format': displayFormat,
-		'groupby': GroupBy,
-		'orderby': OrderBy
+		'format': content.field_ucb_people_display|render|striptags|trim,
+		'groupby': content.field_ucb_people_group_by|render|striptags|trim,
+		'orderby': content.field_ucb_people_order_by|render|striptags|trim
 	}
 %}
-
-<article id="ucb-people-list-page"
-    {{attributes.addClass(classes)}}>
-
+<article id="ucb-people-list-page"{{attributes.addClass(classes)}}>
 	<div class="ucb-people-list-title">
 		<h1{{title_attributes}}>
 			{{ label }}
 		</h1>
 	</div>
-
-	<div id="ucb-pl-content" class="ucb-people-list-content">
-		<div class="row">
-			{{ content.body }}
-		</div>
-
-    {# Loading message #}
-    <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
-      <i class="fas fa-spinner fa-3x fa-pulse"></i>
-    </div>
-
-    {# No more Data #}
-    <div id="ucb-al-no-data" class="ucb-list-msg ucb-end-of-results">
-      No results matching your filters.
-    </div>
-
-    {# Error in the response from the API endpoint, display an error #}
-    <div id="ucb-al-error" class="ucb-list-msg ucb-error">
-      Error retrieving people from the API endpoint.  Please try again later.  
-    </div>
-	</div>
-
-  <ucb-people-list
-  base-uri="{{ url('<front>')|render|trim('/') }}/jsonapi"
-  config="{{ config|json_encode }}"
-  user-config="{}">
-</ucb-people-list>
-
+	<ucb-people-list base-uri="{{ url('<front>')|render|trim('/') }}/jsonapi" config="{{ config|json_encode }}" user-config="{}">
+		<noscript><div class="ucb-list-msg ucb-error">Please enable JavaScript to see this page.</div></noscript>
+	</ucb-people-list>
 </article>
-
-
