attributes error fixed

--- a/templates/field/field--media--field-media-image-caption.html.twig
+++ b/templates/field/field--media--field-media-image-caption.html.twig
@@ -1,5 +1,5 @@
 {% for item in items %}
     <span class="media-image-caption">
-        {{ item|render }}
+        {{ item.content|render }}
     </span>
 {% endfor %}
