--- a/templates/field/field--node--body--basic-page.html.twig
+++ b/templates/field/field--node--body--basic-page.html.twig
@@ -7,6 +7,6 @@
 
 <div class="container">
     {% for item in items %}
-        {{ item|render }}
+        {{ item.content|render }}
     {% endfor %}
 </div>
