#120 Removes form submit button, limits selector width to 150px max

--- a/css/ucb-people-list.css
+++ b/css/ucb-people-list.css
@@ -130,3 +130,7 @@ tbody.ucb-people-list-table-tablebody {
     color: #222;
     background: #EEEEEE;
 }
+
+.people-list-filter .taxonomy-select {
+	max-width: 150px;
+}
