Addition of container classes
Addition of container class for placement fixes on full width 1 column

--- a/templates/block/block--inline-block--events-calendar.html.twig
+++ b/templates/block/block--inline-block--events-calendar.html.twig
@@ -10,6 +10,7 @@
 {{ attach_library('boulderD9_base/ucb-events-calendar') }}
 {%
   set classes = [
+	'container',
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
