--- a/templates/block/block--inline-block--slider.html.twig
+++ b/templates/block/block--inline-block--slider.html.twig
@@ -14,6 +14,7 @@
 
 {%
   set classes = [
+	'container',
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
