--- a/templates/block/block--inline-block--image-gallery.html.twig
+++ b/templates/block/block--inline-block--image-gallery.html.twig
@@ -12,6 +12,7 @@
 
 {%
   set classes = [
+	'container'
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
