fix byline dot, teaser shift if no image

--- a/templates/content/node--ucb-article.html.twig
+++ b/templates/content/node--ucb-article.html.twig
@@ -153,7 +153,7 @@ pageStyleCSS
 			{% endif %}
 					{% if content.field_ucb_article_byline|render %}
 						<div class="ucb-article-byline">
-							<i class="fas fa-circle"></i>
+							&bull;
 							By
 							<span class="ucb-article-author-name" itemprop="author">
 								{{ content.field_ucb_article_byline|render|striptags|trim }}
